--- a/crates/bevy_ecs/Cargo.toml
+++ b/crates/bevy_ecs/Cargo.toml
@@ -12,11 +12,17 @@ categories = ["game-engines", "data-structures"]
 
 [features]
 profiler = []
+simple_executor = []
+rayon_executor = ["rayon"]
+multitask_executor = ["multitask", "parking"]
+default = ["multitask_executor"]
 
 [dependencies]
 bevy_hecs = { path = "hecs", features = ["macros", "serialize"], version = "0.1" }
 rand = "0.7.2"
-rayon = "1.3"
+rayon = { version = "1.3", optional = true }
 crossbeam-channel = "0.4.2"
 fixedbitset = "0.3.0"
 downcast-rs = "1.1.1"
+multitask = { version = "0.2", optional = true }
+parking = { version = "1.0", optional = true }
