Add spawn() public function to pass raw futures through to the executor (#1)
Add a task newtype so that we don't expose multitask::Task
Remove some of the README/license info that was present in the prototype repo
Add some doc comments

--- a/crates/bevy_tasks/Cargo.toml
+++ b/crates/bevy_tasks/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bevy_tasks"
 version = "0.1.0"
 authors = [
+    "Bevy Contributors <bevyengine@gmail.com>",
     "Lachlan Sneff <lachlan.sneff@gmail.com>",
     "Philip Degarmo <aclysma@gmail.com>"
 ]
