--- a/Cargo.toml
+++ b/Cargo.toml
@@ -344,3 +344,7 @@ build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
 min_sdk_version = 16
 target_sdk_version = 29
 
+
+[patch.crates-io]
+profiling = { path = "../profiling" }
+profiling-procmacros = { path = "../profiling/profiling-procmacros" }
