--- a/crates/bevy_app/Cargo.toml
+++ b/crates/bevy_app/Cargo.toml
@@ -13,7 +13,13 @@ license = "MIT"
 keywords = ["bevy"]
 
 [features]
+#default = ["profile-with-optick"]
+default = ["profile-with-superluminal"]
 trace = []
+profile-with-puffin = ["profiling/profile-with-puffin"]
+profile-with-optick = ["profiling/profile-with-optick"]
+profile-with-superluminal = ["profiling/profile-with-superluminal"]
+profile-with-tracing = ["profiling/profile-with-tracing"]
 
 [dependencies]
 # bevy
@@ -23,6 +29,9 @@ bevy_utils = { path = "../bevy_utils", version = "0.3.0" }
 
 # other
 serde = { version = "1.0", features = ["derive"] }
+
+# profiling
+profiling = "0.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2" }
