--- a/crates/bevy_tasks/Cargo.toml
+++ b/crates/bevy_tasks/Cargo.toml
@@ -15,6 +15,14 @@ keywords = ["bevy"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+#default = ["profile-with-optick"]
+default = ["profile-with-superluminal"]
+profile-with-puffin = ["profiling/profile-with-puffin"]
+profile-with-optick = ["profiling/profile-with-optick"]
+profile-with-superluminal = ["profiling/profile-with-superluminal"]
+profile-with-tracing = ["profiling/profile-with-tracing"]
+
 [dependencies]
 futures-lite = "1.4.0"
 event-listener = "2.4.0"
@@ -22,5 +30,10 @@ async-executor = "1.3.0"
 async-channel = "1.4.2"
 instant = { version = "0.1", features = ["wasm-bindgen"] }
 num_cpus = "1"
+
+# profiling
+profiling = "0.1"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
+
